Generate docs for check license api
