# docs/swagger.json
@@ -379,6 +379,70 @@
                 }
             }
         },
+        "/api/v1/resources/download/": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Download resource by resoure name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "download"
+                ],
+                "summary": "Download resource",
+                "operationId": "DownloadResource",
+                "parameters": [
+                    {
+                        "description": "Resource name that need to create download",
+                        "name": "Download",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.DownloadResourceRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Download"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/resources/download/{resourceName}": {
             "get": {
                 "security": [
@@ -391,7 +455,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "resource"
+                    "download"
                 ],
                 "summary": "Get download resource",
                 "operationId": "GetDownloadResource",
@@ -537,6 +601,62 @@
                     }
                 }
             }
+        },
+        "/api/v1/user/license": {
+            "post": {
+                "description": "Check license and update resource status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Check license",
+                "operationId": "CheckLicense",
+                "parameters": [
+                    {
+                        "description": "License key and resource name that need to update",
+                        "name": "License",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.CheckLicenseRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.UserResource"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -577,6 +697,17 @@
                 }
             }
         },
+        "model.CheckLicenseRequest": {
+            "type": "object",
+            "properties": {
+                "license": {
+                    "type": "string"
+                },
+                "resource_name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.CreateUserRequest": {
             "type": "object",
             "required": [
@@ -605,6 +736,28 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Download": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "resource_name": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.DownloadResourceRequest": {
+            "type": "object",
+            "properties": {
+                "resource_name": {
                     "type": "string"
                 }
             }
